# django-helpdesk

./: .releaserc.json  pyproject.toml
.github/workflows/: codeartifact-deploy.yml  release.yml
helpdesk/: admin.py  email.py  email_boston.py  forms.py  lib.py  models.py  settings.py  urls.py
helpdesk/management/commands/: check_orders.py  delete_notifications.py  get_email.py
helpdesk/migrations/: 0103_add_notification_model.py  0103_savedsearch_organization.py  0104_alter_usersettings_model.py  0105_add_pg_trgm_extension.py  0106_add_auto_pair_copy.py  0106_add_checkbox_list_data_type.py  0106_dependson.py  0106_remove_shared_query.py  0107_alter_dependson_value.py  0107_auto_20250108_1231.py  0107_dependson_change_related_name.py  0107_prepopulation.py  0108_auto_20250110_1152.py  0108_derived_column_field.py  0108_prepopulation.py  0109_auto_20250129_0741.py  0109_derived_column_field.py  0110_multi_pair.py  0110_order_ordersettings.py  0111_alter_ticket_building_id.py  0111_prepare_ticket_building_id.py  0111_remove_ordersettings_labels.py  0112_alter_ticket_building_id.py  0112_building_id_from_list.py  0112_ordersettings_building_name.py  0113_building_id_from_list.py  0114_ticket_beam_portfolio.py  0115_auto_pair_copy.py
helpdesk/templates/helpdesk/: base.html  confirm_delete_saved_query.html  create_announcement.html  create_ticket.html  dashboard.html  edit_form.html  edit_inventory_labels.html  edit_ticket.html  email_ignore_del.html  email_ignore_list.html  (+45 more)
helpdesk/templatetags/: get_unread_notifications.py  helpdesk_util.py  natural_time_date.py  organization_info.py  saved_queries.py
helpdesk/tests/: test_query_actions.py
helpdesk/views/: abstract_views.py  kb.py  public.py  staff.py
(+21 files in other folders)
