[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helpdesk*"]

[project]
name = "beam-django-helpdesk"
version = "0.3.0b3"
description = "Django-powered ticket tracker for your helpdesk"
authors = [{name = "Ross Poulton", email = "ross@rossp.org"}]
maintainers = [{name = "Garret Wassermann", email = "gwasser@gmail.com"}]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.7"
readme = { file = "README.rst", content-type = "text/x-rst"}
classifiers = [
    "Development Status :: 5 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Framework :: Django",
    'Framework :: Django :: 2.2',
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "Django>=2.2,<4",
    "django-bootstrap4-form",
    "celery",
    "django-celery-beat",
    "email-reply-parser",
    "akismet",
    "markdown",
    "beautifulsoup4",
    "lxml",
    "simplejson",
    "pytz",
    "six",
    "djangorestframework",
    "django-model-utils",
    "pinax-teams>=2.0",
    "bleach==6.0.0",
    "bleach[css]",
    "bleach-allowlist"
]

[project.optional-dependencies]
tests = [
    "pysocks",
    "pycodestyle",
    "codecov",
    "coverage",
    "argparse",
    "pbr",
    "mock"  
]

[project.urls]
Repository = "https://github.com/ClearlyEnergy/django-helpdesk"